--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,6 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v4
-        with:
-          node-version: "20"
 
       - name: Configure AWS credentials from AWS account
         uses: aws-actions/configure-aws-credentials@v4
@@ -66,35 +64,35 @@ jobs:
       #     docker push $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG
       #     echo "::set-output name=image::$AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG"
       #
-      # - name: Build sendvendor ECR
+      # - name: Build sendmovie ECR
       #   uses: int128/create-ecr-repository-action@v1
-      #   id: sendvendor-ecr
+      #   id: sendmovie-ecr
       #   with:
-      #     repository: ${{ secrets.AWS_ECR_NAME_SENDVENDOR }}
+      #     repository: ${{ secrets.AWS_ECR_NAME_SENDMOVIE }}
       #
-      # - name: Build, tag, and push sendvendor image to Amazon ECR
-      #   id: build-image-sendvendor
+      # - name: Build, tag, and push sendmovie image to Amazon ECR
+      #   id: build-image-sendmovie
       #   env:
       #     AWS_ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       #     AWS_IMAGE_TAG: ${{ github.sha }}
-      #     AWS_ECR_REPOSITORY: ${{ secrets.AWS_ECR_NAME_SENDVENDOR }}
+      #     AWS_ECR_REPOSITORY: ${{ secrets.AWS_ECR_NAME_SENDMOVIE }}
       #   run: |
       #     docker build -t $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG --target $AWS_ECR_REPOSITORY .
       #     docker push $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG
       #     echo "::set-output name=image::$AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG"
       #
-      # - name: Build getvendors ECR
+      # - name: Build getmovie ECR
       #   uses: int128/create-ecr-repository-action@v1
-      #   id: getvendors-ecr
+      #   id: getmovies-ecr
       #   with:
-      #     repository: ${{ secrets.AWS_ECR_NAME_GETVENDORS }}
+      #     repository: ${{ secrets.AWS_ECR_NAME_GETMOVIES }}
       #
-      # - name: Build, tag, and push getvendors image to Amazon ECR
-      #   id: build-image-getvendors
+      # - name: Build, tag, and push getmovies image to Amazon ECR
+      #   id: build-image-getmovies
       #   env:
       #     AWS_ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       #     AWS_IMAGE_TAG: ${{ github.sha }}
-      #     AWS_ECR_REPOSITORY: ${{ secrets.AWS_ECR_NAME_GETVENDORS }}
+      #     AWS_ECR_REPOSITORY: ${{ secrets.AWS_ECR_NAME_GETMOVIES }}
       #   run: |
       #     docker build -t $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG --target $AWS_ECR_REPOSITORY .
       #     docker push $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG
