--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.137",
     "@types/node": "^20.12.7",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "typescript": "^5.4.5"
   },
   "dependencies": {
@@ -17,12 +16,6 @@
     "@aws-sdk/lib-dynamodb": "^3.556.0",
     "@aws-sdk/node-http-handler": "^3.374.0",
     "@aws-sdk/util-dynamodb": "^3.556.0",
-    "dotenv": "^16.4.5",
-    "eslint": "^9.1.1",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.28.0"
+    "dotenv": "^16.4.5"
   }
 }
