--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,6 +98,23 @@ jobs:
           docker push $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG
           echo "::set-output name=image::$AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG"
 
+      - name: Build crudmovie ECR
+        uses: int128/create-ecr-repository-action@v1
+        id: getmovies-ecr
+        with:
+          repository: ${{ secrets.AWS_ECR_NAME_CRUDMOVIE }}
+
+      - name: Build, tag, and push crudmovie image to Amazon ECR
+        id: build-image-crudmovie
+        env:
+          AWS_ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          AWS_IMAGE_TAG: ${{ github.sha }}
+          AWS_ECR_REPOSITORY: ${{ secrets.AWS_ECR_NAME_CRUDMOVIE}}
+        run: |
+          docker build -t $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG --target $AWS_ECR_REPOSITORY .
+          docker push $AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG
+          echo "::set-output name=image::$AWS_ECR_REGISTRY/$AWS_ECR_REPOSITORY:$AWS_IMAGE_TAG"
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
