--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/lib-dynamodb": "^3.556.0",
     "@aws-sdk/node-http-handler": "^3.374.0",
     "@aws-sdk/util-dynamodb": "^3.556.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "uuid": "^9.0.1"
   }
 }
